filter allow18 checkbox 2

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -114,13 +114,20 @@
                 <option value="2">Dropped</option>
                 <option value="3">Finished</option>
             </select>
+            <label class="f-allow18">
+                +18
+                <div class="checkboxOverride">
+                    <input type="checkbox" name="allow18" id="checkboxInputOverride" value="1">
+                    <label for="checkboxInputOverride"></label>
+                </div>
+            </label>
+                <!--
             <div class="f-allow18">
-                <label>+18</label>
                 <div class="f-allow18check-cont">
                     <input type="checkbox" name="allow18">
                     <span class="f-allow18custom"></span>
                 </div>
-            </div>
+            </div>-->
             <select name="lastupdate">
                 <option value="0">Last update</option>
                 <option value="1">&#60; 1 day</option>
