--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -392,24 +392,47 @@ main{
             .f-allow18{
                 display: flex;
                 justify-content: space-between;
-                .f-allow18check-cont{
-                    display: block;
+                input[type="checkbox"] {
+                    visibility: hidden;
+                }
+                .checkboxOverride {
                     position: relative;
+                    width: 16px;
                     margin-left: 4px;
-                    height: 100%;
-                    input{
-                        position: absolute;
-                        opacity: 0;
-                        cursor: pointer;
-                        height: 0;
-                        width: 0;
-                    }
-                    .f-allow18custom{
-                        height: 20px;
-                        width: 20px;
-                        background-color: transparent;
-                        border: 2px black solid;
-                    }
+                }
+                .checkboxOverride input[type="checkbox"]:checked + label:after {
+                    opacity: 1;
+                }
+                .checkboxOverride input[type="checkbox"]:checked + label{
+                    background-color: #24ac17 !important;
+                    border: 2px solid #24ac17 !important;
+                    color: #fff !important;
+                }
+                .checkboxOverride label {
+                    background-color: transparent;
+                    border: 2px solid $textcolor;
+                    cursor: pointer;
+                    height: 16px;
+                    width: 16px;
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    bottom: 1px;
+                    margin: auto 0;
+                    border-radius: 4px;
+                }
+                .checkboxOverride label:after {
+                    border-style: none none solid solid;
+                    content: "";
+                    height: 6px;
+                    opacity: 0;
+                    position: absolute;
+                    left: 0;
+                    top: 0px;
+                    bottom: 3px;
+                    margin: auto;
+                    transform: rotate(-45deg);
+                    width: 12px;
                 }
             }
         }
