filter submit, fixes, align center

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -85,11 +85,11 @@
     </div>
     <div class="f-body">
         <div class="f-type_cont">
-            <span>Type:</span>
-            <input type="button" value="Fanfiction">
-            <input type="button" value="Story">
-            <input type="button" value="Scenerio">
-            <input type="button" value="Fanfiction">
+            <!--<span>Type:</span>-->
+            <input type="button" value="Fanfiction +">
+            <input type="button" value="Story +">
+            <input type="button" value="Scenerio +">
+            <input type="button" value="Fanfiction +">
         </div>
         <div class="f-options">
             <select name="minrate">
@@ -121,8 +121,7 @@
                     <label for="checkboxInputOverride"></label>
                 </div>
             </label>
-                <!--
-            <div class="f-allow18">
+            <!--<div class="f-allow18">
                 <div class="f-allow18check-cont">
                     <input type="checkbox" name="allow18">
                     <span class="f-allow18custom"></span>
@@ -139,8 +138,8 @@
             </select>
         </div>
         <div class="f-tagsbtn_cont">
-            <input type="button" value="Tags+" class="f-addtag">
-            <input type="button" value="Tags-" class="f-removetag">
+            <input type="button" value="Tags +" class="f-addtag">
+            <input type="button" value="Tags -" class="f-removetag">
         </div>
         <div class="f-tags_include">
             <span>Action</span>
@@ -151,6 +150,9 @@
             <span>Romance</span>
             <span>Dram</span>
         </div>
+    </div>
+    <div class="f-submit_cont">
+        <input type="submit" id="f-submitbtn" value="Filter">
     </div>
 </div>
 
