--- a/OmneFictio.Web/wwwroot/css/index.css
+++ b/OmneFictio.Web/wwwroot/css/index.css
@@ -344,20 +344,21 @@ main {
   text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.3137254902);
 }
 .filter-cont .f-body {
-  padding: 10px 12px;
+  padding: 10px 12px 0;
 }
 .filter-cont .f-body .f-type_cont {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   padding-bottom: 3px;
-}
-.filter-cont .f-body .f-type_cont span {
-  font-size: 1.4rem;
-  margin: 0 10px 7px 0;
+  /*span{
+      font-size: 1.4rem;
+      margin: 0 4px 7px;
+  }*/
 }
 .filter-cont .f-body .f-type_cont input {
   font-size: 1.1rem;
-  margin: 0 10px 7px 0;
+  margin: 0 4px 7px;
   background-color: rgb(139, 136, 199);
   color: #ffffff;
   transition: background-color 0.2s;
@@ -372,6 +373,7 @@ main {
 .filter-cont .f-body .f-options {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   padding-bottom: 3px;
 }
 .filter-cont .f-body .f-options select, .filter-cont .f-body .f-options .f-allow18 {
@@ -380,7 +382,7 @@ main {
   background: #4E4E4E;
   color: #ffffff;
   padding: 4px;
-  margin: 0 10px 7px 0;
+  margin: 0 5px 7px;
   border-radius: 5px;
   font-size: 1.1rem;
 }
@@ -452,26 +454,43 @@ main {
 .filter-cont .f-body .f-tags_include {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   padding-bottom: 4px;
 }
 .filter-cont .f-body .f-tags_include span {
   background-color: #5c976d;
   border-radius: 12px;
   padding: 2px 8px;
-  margin: 0 5px 4px 0;
+  margin: 0 3px 4px;
   font-size: 0.9rem;
 }
 .filter-cont .f-body .f-tags_exclude {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   padding-bottom: 4px;
 }
 .filter-cont .f-body .f-tags_exclude span {
   background-color: #77749f;
   border-radius: 12px;
   padding: 2px 8px;
-  margin: 0 5px 4px 0;
+  margin: 0 3px 4px;
   font-size: 0.9rem;
+}
+.filter-cont .f-submit_cont {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 4px 0 10px;
+  font-size: 1.3rem;
+}
+.filter-cont .f-submit_cont #f-submitbtn {
+  border: none;
+  outline: none;
+  background-color: rgb(42, 72, 114);
+  color: #fff;
+  border-radius: 8px;
+  padding: 3px 30px;
 }
 
 @media (min-width: 768px) {
