filter tag dropdown 1

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -142,13 +142,18 @@
             <input type="button" value="Tags -" class="f-removetag">
         </div>
         <div class="f-tags_include">
-            <span>Action</span>
-            <span>Comedy</span>
-            <span>Fantasy</span>
+            <span data-ftag="action">Action</span>
+            <input type="hidden" name="taginclude" value="action" data-ftagref="action"/>
+            <span data-ftag="comedy">Comedy</span>
+            <input type="hidden" name="taginclude" value="comedy" data-ftagref="comedy"/>
+            <span data-ftag="fantasy">Fantasy</span>
+            <input type="hidden" name="taginclude" value="fantasy" data-ftagref="fantasy"/>
         </div>
         <div class="f-tags_exclude">
-            <span>Romance</span>
-            <span>Dram</span>
+            <span data-ftag="romance">Romance</span>
+            <input type="hidden" name="tagexclude" value="romance" data-ftagref="romance"/>
+            <span data-ftag="dram">Dram</span>
+            <input type="hidden" name="tagexclude" value="dram" data-ftagref="dram"/>
         </div>
     </div>
     <div class="f-submit_cont">
@@ -156,6 +161,21 @@
     </div>
 </div>
 
+<div class="filter-tagdd d-flex">
+    <div class="tagdd-header">
+        <input type="text" class="taggdd-searchbar" placeholder="Search tag">
+        <i class="bi bi-x-lg" id="f-taggdd-close"></i>
+    </div>
+    <ul id="f-tagdd-include">
+        <li data-tagddvalue="action">Action</li>
+        <li data-tagddvalue="comedy">Comedy</li>
+        <li data-tagddvalue="fantasy">Fantasy</li>
+        <li data-tagddvalue="romance">Romance</li>
+        <li data-tagddvalue="dram">Dram</li>
+        <li data-tagddvalue="horror">Horror</li>
+        <li data-tagddvalue="adventure">Adventure</li>
+    </ul>
+</div>
 
 <div class="nav-cont">
     <div class="navcont-temp">
