--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="body-outside"></div>
-    
+    <div class="f-modaldarkness d-block"></div>
     <div class="drawer">
         <div class="dw-top">
             <div class="dw-account">
