--- a/OmneFictio.Web/wwwroot/css/index.css
+++ b/OmneFictio.Web/wwwroot/css/index.css
@@ -302,7 +302,7 @@ main {
   display: none;
   opacity: 0;
   transition: opacity 0.3s ease;
-  z-index: 903;
+  z-index: 505;
   position: absolute;
   top: 60px;
   margin-left: auto;
@@ -315,6 +315,17 @@ main {
   width: 260px;
   border-radius: 20px;
   font-family: "Itim", cursive;
+  overflow: hidden;
+  /*.f-tagdd-cont{
+      display: none;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 507;
+      padding: 50px;
+  }*/
 }
 .filter-cont .f-header {
   width: 100%;
@@ -493,6 +504,74 @@ main {
   padding: 3px 30px;
 }
 
+.filter-tagdd {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  top: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  height: 340px;
+  width: 240px;
+  border-radius: 20px;
+  overflow: hidden;
+  z-index: 507;
+  background-color: #313131;
+  box-shadow: 0px 0px 6px 0px rgba(49, 49, 49, 0.3137254902);
+  padding-bottom: 10px;
+}
+.filter-tagdd .tagdd-header {
+  width: 100%;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+}
+.filter-tagdd .tagdd-header .taggdd-searchbar {
+  padding: 2px 6px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  width: 100%;
+  flex-shrink: 1;
+  border: 1px solid #ffffff;
+}
+.filter-tagdd .tagdd-header > i {
+  margin: 0 4px 0 20px;
+  margin-right: 4px;
+  font-size: 1.3rem;
+  flex-shrink: 0;
+  text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.3137254902);
+  cursor: pointer;
+}
+.filter-tagdd > ul {
+  flex-grow: 1;
+  overflow-y: auto;
+}
+.filter-tagdd > ul > li {
+  width: 100%;
+  padding: 6px 20px;
+  overflow: hidden;
+  cursor: pointer;
+}
+.filter-tagdd > ul > li:hover {
+  background-color: #373737;
+}
+.filter-tagdd > ul::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #F5F5F5;
+}
+.filter-tagdd > ul::-webkit-scrollbar {
+  width: 6px;
+  background-color: #F5F5F5;
+}
+.filter-tagdd > ul::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+
 @media (min-width: 768px) {
   .nav-cont {
     display: flex;
@@ -513,6 +592,10 @@ main {
 
   .filter-cont {
     width: 340px;
+  }
+
+  .filter-tagdd {
+    width: 280px;
   }
 }
 @media (min-width: 992px) {
