--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -310,7 +310,7 @@ main{
     display: none;
     opacity: 0;
     transition: opacity 0.3s ease;
-    z-index: 903;
+    z-index: 505;
     position: absolute;
     top: 60px;
     margin-left: auto;
@@ -323,6 +323,17 @@ main{
     width: 260px;
     border-radius: 20px;
     font-family: 'Itim', cursive;
+    overflow: hidden;
+    /*.f-tagdd-cont{
+        display: none;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 507;
+        padding: 50px;
+    }*/
     .f-header{
         width: 100%;
         border-bottom: 2px solid $frontbgcolor_hover4;
@@ -500,6 +511,75 @@ main{
         }
     }
 }
+.filter-tagdd{
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 80px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    height: 340px;
+    width: 240px;
+    border-radius: 20px;
+    overflow: hidden;
+    z-index: 507;
+    background-color: $frontbgcolor;
+    box-shadow: 0px 0px 6px 0px $frontbgcolor_boxshadow;
+    padding-bottom: 10px;
+    .tagdd-header{
+        width: 100%;
+        flex-shrink: 0;
+        display: flex;
+        flex-direction: row;
+        padding: 10px;
+        .taggdd-searchbar{
+            padding: 2px 6px;
+            border: none;
+            outline: none;
+            border-radius: 4px;
+            width: 100%;
+            flex-shrink: 1;
+            border: 1px solid $textcolor;
+        }
+        > i {
+            margin: 0 4px 0 20px;
+            margin-right: 4px;
+            font-size: 1.3rem;
+            flex-shrink: 0;
+            text-shadow: 0px 0px 6px $textcolor_boxshadow;
+            cursor: pointer;
+        }
+    }
+    > ul{
+        flex-grow: 1;
+        overflow-y: auto;
+        > li{
+            width: 100%;
+            padding: 6px 20px;
+            overflow: hidden;
+            cursor: pointer;
+            &:hover{
+                background-color: $frontbgcolor_hover1;
+            }
+        }
+        &::-webkit-scrollbar-track{
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+            box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+            background-color: #F5F5F5;
+        }
+        &::-webkit-scrollbar{
+            width: 6px;
+            background-color: #F5F5F5;
+        }
+        &::-webkit-scrollbar-thumb{
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+            box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+            background-color: #555;
+        }
+    }
+}
 
 
 
@@ -526,6 +606,9 @@ main{
     }
     .filter-cont{
         width: 340px;
+    }
+    .filter-tagdd{
+        width: 280px;
     }
 }
 
