--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -41,8 +41,17 @@ a:hover {
   width: 100%;
   height: 100%;
   position: fixed;
-  z-index: 899;
   background-color: rgba(0, 0, 0, 0.3764705882);
+  z-index: 200;
+}
+
+.f-modaldarkness {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.3764705882);
+  z-index: 506;
 }
 
 /*-----------DESIGN-------------*/
@@ -89,7 +98,7 @@ header .header-wrap {
 .drawer {
   display: flex;
   flex-direction: column;
-  z-index: 901;
+  z-index: 550;
   position: fixed;
   top: 0;
   left: 0;
