--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -35,13 +35,24 @@ ul,ol,li,b,h1,h2,h3,h4,h6,a,p{
 a:hover{
     color: inherit;
 }
+
+//Background clickable shadows
 .body-outside{
     display: none;
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: 899;
     background-color: #00000060;
+    z-index: 200;
+}
+
+.f-modaldarkness{
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: #00000060;
+    z-index: 506;
 }
 
 /*-----------DESIGN-------------*/
@@ -84,7 +95,7 @@ header{
 .drawer{
     display: flex;
     flex-direction: column;
-    z-index: 901;
+    z-index: 550;
     position: fixed;
     top:0;
     left: 0;
