--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     }
 }
 
-<div class="orderby_type-cont" id="orderby-popup">
+<div class="orderby_type-cont" id="orderby-modal">
     <div class="obt-header">
         <div class="obt-title">
             <span>Order By</span>
@@ -39,7 +39,7 @@
     </div>
 </div>
 
-<div class="orderby_type-cont" id="type-popup">
+<div class="orderby_type-cont" id="type-modal">
     <div class="obt-header">
         <div class="obt-title">
             <span>Type</span>
@@ -74,7 +74,7 @@
     </div>
 </div>
 
-<div class="filter-cont" id="filter-popup">
+<div class="filter-cont" id="filter-modal">
     <div class="f-header">
         <div class="f-reset_cont">
             <input type="button" value="Reset" id="f-resetbtn">
@@ -138,8 +138,8 @@
             </select>
         </div>
         <div class="f-tagsbtn_cont">
-            <input type="button" value="Tags +" class="f-addtag">
-            <input type="button" value="Tags -" class="f-removetag">
+            <input type="button" value="Tags +" class="f-addtag" id="f-addtagbtn">
+            <input type="button" value="Tags -" class="f-removetag" id="f-removetagbtn">
         </div>
         <div class="f-tags_include">
             <span data-ftag="action">Action</span>
@@ -161,12 +161,21 @@
     </div>
 </div>
 
-<div class="filter-tagdd d-flex">
+<div class="filter-tagdd" id="filter-taggddmodal">
     <div class="tagdd-header">
         <input type="text" class="taggdd-searchbar" placeholder="Search tag">
         <i class="bi bi-x-lg" id="f-taggdd-close"></i>
     </div>
-    <ul id="f-tagdd-include">
+    <ul class="" id="f-tagdd-include">
+        <li data-tagddvalue="action">Action</li>
+        <li data-tagddvalue="comedy">Comedy</li>
+        <li data-tagddvalue="fantasy">Fantasy</li>
+        <li data-tagddvalue="romance">Romance</li>
+        <li data-tagddvalue="dram">Dram</li>
+        <li data-tagddvalue="horror">Horror</li>
+        <li data-tagddvalue="adventure">Adventure</li>
+    </ul>
+    <ul class="" id="f-tagdd-exclude">
         <li data-tagddvalue="action">Action</li>
         <li data-tagddvalue="comedy">Comedy</li>
         <li data-tagddvalue="fantasy">Fantasy</li>
