--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -555,6 +555,7 @@ main{
     > ul{
         flex-grow: 1;
         overflow-y: auto;
+        display: none;
         > li{
             width: 100%;
             padding: 6px 20px;
