include/exclude tag actions

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -142,18 +142,22 @@
             <input type="button" value="Tags -" class="f-removetag" id="f-removetagbtn">
         </div>
         <div class="f-tags_include">
+            <!--
             <span data-ftag="action">Action</span>
             <input type="hidden" name="taginclude" value="action" data-ftagref="action"/>
             <span data-ftag="comedy">Comedy</span>
             <input type="hidden" name="taginclude" value="comedy" data-ftagref="comedy"/>
             <span data-ftag="fantasy">Fantasy</span>
             <input type="hidden" name="taginclude" value="fantasy" data-ftagref="fantasy"/>
+            -->
         </div>
         <div class="f-tags_exclude">
+            <!--
             <span data-ftag="romance">Romance</span>
             <input type="hidden" name="tagexclude" value="romance" data-ftagref="romance"/>
             <span data-ftag="dram">Dram</span>
             <input type="hidden" name="tagexclude" value="dram" data-ftagref="dram"/>
+            -->
         </div>
     </div>
     <div class="f-submit_cont">
@@ -174,6 +178,7 @@
         <li data-tagddvalue="dram">Dram</li>
         <li data-tagddvalue="horror">Horror</li>
         <li data-tagddvalue="adventure">Adventure</li>
+        <li data-tagddvalue="science_fiction">Science fiction</li>
     </ul>
     <ul class="" id="f-tagdd-exclude">
         <li data-tagddvalue="action">Action</li>
@@ -183,6 +188,7 @@
         <li data-tagddvalue="dram">Dram</li>
         <li data-tagddvalue="horror">Horror</li>
         <li data-tagddvalue="adventure">Adventure</li>
+        <li data-tagddvalue="science_fiction">Science fiction</li>
     </ul>
 </div>
 
