filter searchbar actions and clear

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -167,7 +167,7 @@
 
 <div class="filter-tagdd" id="filter-taggddmodal">
     <div class="tagdd-header">
-        <input type="text" class="taggdd-searchbar" placeholder="Search tag">
+        <input type="text" class="taggdd-searchbar" id="taggdd-searchbar" placeholder="Search tag">
         <i class="bi bi-x-lg" id="f-taggdd-close"></i>
     </div>
     <ul class="" id="f-tagdd-include">
