--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -461,38 +461,46 @@ main{
                 border-radius: 8px;
                 padding: 2px 12px;
             }
-            .f-addtag{
+            .f-includetag{
                 background-color: #615ea1;
             }
-            .f-removetag{
+            .f-excludetag{
                 background-color: rgb(168, 75, 75);
             }
         }
-        .f-tags_include{
+        .f-tagsincexc{
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             padding-bottom: 4px;
             span{
-                background-color: #5c976d;
                 border-radius: 12px;
                 padding: 2px 8px;
                 margin: 0 3px 4px;
                 font-size: 0.9rem;
+                display: flex;
+                align-items: center;
+            }
+            .f-removetagbtn{
+                font-size: 1.1rem;
+                margin-left: 5px;
+                cursor: pointer;
+                display: flex;
+                &:before {
+                    background-color: #c08e8e;
+                    border-radius: 50%;
+                    transition: 0.1s;
+                }
+                &:hover::before{
+                    background-color: #be2424;
+                }
             }
         }
-        .f-tags_exclude{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            padding-bottom: 4px;
-            span{
-                background-color: #77749f;
-                border-radius: 12px;
-                padding: 2px 8px;
-                margin: 0 3px 4px;
-                font-size: 0.9rem;
-            }
+        .f-tags_include > span{
+            background-color: #5c976d;
+        }
+        .f-tags_exclude > span{
+            background-color: #77749f;
         }
     }
     .f-submit_cont{
