add tag remove button and related actions 2

--- a/OmneFictio.Web/wwwroot/css/index.css
+++ b/OmneFictio.Web/wwwroot/css/index.css
@@ -473,6 +473,7 @@ main {
   padding: 2px 8px;
   margin: 0 3px 4px;
   font-size: 0.9rem;
+  cursor: pointer;
   display: flex;
   align-items: center;
 }
@@ -480,15 +481,15 @@ main {
   font-size: 1.1rem;
   margin-left: 5px;
   cursor: pointer;
-  display: flex;
+  display: none;
 }
 .filter-cont .f-body .f-tagsincexc .f-removetagbtn:before {
-  background-color: #c08e8e;
+  background-color: #be2424;
   border-radius: 50%;
   transition: 0.1s;
 }
 .filter-cont .f-body .f-tagsincexc .f-removetagbtn:hover::before {
-  background-color: #be2424;
+  background-color: #be2424 !important;
 }
 .filter-cont .f-body .f-tags_include > span {
   background-color: #5c976d;
@@ -605,6 +606,10 @@ main {
 
   .filter-tagdd {
     width: 280px;
+  }
+
+  .f-removetagbtn:before {
+    background-color: #c08e8e !important;
   }
 }
 @media (min-width: 992px) {
