adding post status to post menus

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -260,6 +260,10 @@
                     <span class="pd-heading">Type:</span>
                     <span class="pd-value">Fanfiction</span>
                 </div>
+                <div class="pd-poststatus">
+                    <span class="pd-heading">Status:</span>
+                    <span class="pd-value">In-progress</span>
+                </div>
                 <div class="pd-language">
                     <span class="pd-heading">Language:</span>
                     <span class="pd-value">English</span>
@@ -321,6 +325,10 @@
                     <span class="pd-heading">Type:</span>
                     <span class="pd-value">Fanfiction</span>
                 </div>
+                <div class="pd-poststatus">
+                    <span class="pd-heading">Status:</span>
+                    <span class="pd-value">In-progress</span>
+                </div>
                 <div class="pd-language">
                     <span class="pd-heading">Language:</span>
                     <span class="pd-value">English</span>
@@ -380,6 +388,10 @@
                 <div class="pd-type">
                     <span class="pd-heading">Type:</span>
                     <span class="pd-value">Fanfiction</span>
+                </div>
+                <div class="pd-poststatus">
+                    <span class="pd-heading">Status:</span>
+                    <span class="pd-value">In-progress</span>
                 </div>
                 <div class="pd-language">
                     <span class="pd-heading">Language:</span>
