--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -171,6 +171,9 @@ main{
         .pd-type{
             margin-bottom: 8px;
         }
+        .pd-poststatus{
+            margin-bottom: 8px;
+        }
     }
     .pd-right{
         display: flex;
