splitting pages and new homepage 1

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
                 <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-people"></i></div>Friends</a></li>
                 <li><a href="#"><div class="dw-icon-cont"></div>News</a></li>
                 <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-clock-history"></i></div>History</a></li>
+                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-box-arrow-left"></i></div>Logout</a></li>
             </ul>
         </div>
         <a href="#" class="dw-settings"><div class="dw-icon-cont"><i class="bi bi-gear-fill"></i></div>Settings</a>
