new main page 2

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Read";
     @section Stylesheets {
         <link rel="stylesheet" href="~/css/read.css" />
     }
@@ -90,10 +90,12 @@
             <input type="hidden" name="chosentypes" value="story-0" data-typeref="story"/>
             <input type="button" class="f-typebtns" value="Scenerio +" data-type="scenerio">
             <input type="hidden" name="chosentypes" value="scenerio-0" data-typeref="scenerio"/>
+            <!--
             <input type="button" class="f-typebtns" value="Fanfiction +" data-type="fanfiction">
             <input type="hidden" name="chosentypes" value="fanfiction-0" data-typeref="fanfiction"/>
             <input type="button" class="f-typebtns" value="Plot +" data-type="plot">
             <input type="hidden" name="chosentypes" value="plot-0" data-typeref="plot"/>
+            -->
         </div>
         <div class="f-options">
             <select name="minrate">
