--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
         <div class="dw-list">
             <ul>
                 <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-person"></i></div>Profile</a></li>
-                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-book"></i></div>Library</a></li>
+                <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-journals"></i></div>Library</a></li>
                 <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-currency-dollar"></i></div>Donate</a></li>
                 <li><a href="#"><div class="dw-icon-cont"><i class="bi bi-people"></i></div>Friends</a></li>
                 <li><a href="#"><div class="dw-icon-cont"></div>News</a></li>
