--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -5,21 +5,6 @@ html {
     font-size: 14px;
     position: relative;
     height: 100%;
-    &::-webkit-scrollbar-track{
-        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-        box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-        background-color: #F5F5F5;
-    }
-    &::-webkit-scrollbar{
-        width: 6px;
-        background-color: #F5F5F5;
-    }
-    &::-webkit-scrollbar-thumb{
-        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-        box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-        border-radius: 10px;
-        background-color: #555;
-    }
 }
 body{
     padding:0;
@@ -54,6 +39,7 @@ a:hover{
     background-color: #00000060;
     z-index: 506;
 }
+
 
 /*-----------DESIGN-------------*/
 body{
@@ -168,21 +154,6 @@ header{
                     }
                 }
             }
-        }
-        &::-webkit-scrollbar-track{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-            box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-            background-color: #F5F5F5;
-        }
-        &::-webkit-scrollbar{
-            width: 6px;
-            background-color: #F5F5F5;
-        }
-        &::-webkit-scrollbar-thumb{
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-            box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-            border-radius: 10px;
-            background-color: #555;
         }
     }
     .dw-settings{
@@ -383,6 +354,25 @@ header{
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
+    
+    //scrollbar
+    ::-webkit-scrollbar-track{
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        background-color: #F5F5F5;
+    }
+    ::-webkit-scrollbar{
+        height: 6px;
+        width: 6px;
+        background-color: #F5F5F5;
+    }
+    ::-webkit-scrollbar-thumb{
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+        box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+        background-color: #555;
+    }
+    //--------
+
     html {
         font-size: 16px;
     }
@@ -429,5 +419,15 @@ header{
 @media (min-width: 1300px) {
     .searchbar-wrap{
         max-width: 550px !important;
+    }
+}
+
+// Max widths
+@media (max-width: 767.98px) {
+    .main-cont{
+        padding: 0;
+        margin: 0;
+        max-width: unset;
+        width: 100%;
     }
 }
