--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -5,19 +5,6 @@ html {
   position: relative;
   height: 100%;
 }
-html::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #F5F5F5;
-}
-html::-webkit-scrollbar {
-  width: 6px;
-  background-color: #F5F5F5;
-}
-html::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-  background-color: #555;
-}
 
 body {
   padding: 0;
@@ -169,19 +156,6 @@ header .header-wrap {
 }
 .drawer .dw-list > ul > li > a:hover {
   background-color: #313131;
-}
-.drawer .dw-list::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #F5F5F5;
-}
-.drawer .dw-list::-webkit-scrollbar {
-  width: 6px;
-  background-color: #F5F5F5;
-}
-.drawer .dw-list::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-  background-color: #555;
 }
 .drawer .dw-settings {
   margin-top: auto;
@@ -380,6 +354,22 @@ header .header-wrap {
   }
 }
 @media (min-width: 768px) {
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+  }
+
+  ::-webkit-scrollbar {
+    height: 6px;
+    width: 6px;
+    background-color: #F5F5F5;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #555;
+  }
+
   html {
     font-size: 16px;
   }
@@ -425,5 +415,13 @@ header .header-wrap {
 @media (min-width: 1300px) {
   .searchbar-wrap {
     max-width: 550px !important;
+  }
+}
+@media (max-width: 767.98px) {
+  .main-cont {
+    padding: 0;
+    margin: 0;
+    max-width: unset;
+    width: 100%;
   }
 }/*# sourceMappingURL=site.css.map */
