--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Home";
     @section Stylesheets {
-        <link rel="stylesheet" href="~/css/index.css" />
+        <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
     }
     @section Scripts {
-        <script src="~/js/index.js"></script>
+        <script src="~/js/index.js" asp-append-version="true" ></script>
     }
 }
 <div class="linkgroups">
@@ -65,5 +65,350 @@
                 <span>Tutorials</span>
             </div>
         </div>
+    </div>
+</div>
+
+<div class="toppost_groups">
+    <div class="tpgroup tpgroup_1">
+        <div class="tpgroup_header">
+            <span>Today's Top Posts</span>
+        </div>
+        <div class="post">
+            <div class="post-detail d-flex">
+                <div class="p-header">
+                    <div class="p-title">
+                        <span>Odin the Omnipotent</span>
+                        <span class="p-date">27/07/022</span>
+                    </div>
+                    <div class="p-menu">
+                        <i class="bi bi-caret-left p-menubtn"></i>
+                    </div>
+                </div>
+                <div class="p-body">
+                    After his father’s death, Odin was not going to be so peaceful. Old ways died as the new skyfather born.
+                </div>
+                <div class="p-footer">
+                    <div class="pf-evaluation">
+                        <i class="bi bi-hand-thumbs-up p-likebtn"></i>
+                        <span class="p-likes">5465</span>
+                        <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
+                        <span class="p-rate">7.4/10</span>
+                    </div>
+                    <div class="pf-user">
+                        <span class="p-username">MrBombastic</span>
+                        <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
+                    </div>
+                </div>
+            </div>
+            <div class="post-menu d-none">
+                <div class="pd-details">
+                    <span class="pd-heading">
+                        Tags
+                    </span>
+                    <div class="pd-tags">
+                        <span>Action</span>
+                        <span>Comedy</span>
+                        <span>Mystery</span>
+                        <span>Fantasy</span>
+                        <span>Romance</span>
+                        <span>Western</span>
+                    </div>
+                    <div class="pd-type">
+                        <span class="pd-heading">Type:</span>
+                        <span class="pd-value">Fanfiction</span>
+                    </div>
+                    <div class="pd-poststatus">
+                        <span class="pd-heading">Status:</span>
+                        <span class="pd-value">In-progress</span>
+                    </div>
+                    <div class="pd-language">
+                        <span class="pd-heading">Language:</span>
+                        <span class="pd-value">English</span>
+                    </div>
+                </div>
+                <div class="pd-right">
+                    <div class="pd-close">
+                        <i class="bi bi-caret-down pd-closebtn"></i>
+                    </div>
+                    <div class="pd-actions">
+                        <button type="button" class="pd-saved">Save</button>
+                        <button type="button">Share</button>
+                        <button type="button">Report</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        
+        <div class="post">
+            <div class="post-detail d-flex">
+                <div class="p-header">
+                    <div class="p-title">
+                        <span>Odin the Omnipotent</span>
+                        <span class="p-date">27/07/022</span>
+                    </div>
+                    <div class="p-menu">
+                        <i class="bi bi-caret-left p-menubtn"></i>
+                    </div>
+                </div>
+                <div class="p-body">
+                    After his father’s death, Odin was not going to be so peaceful. Old ways died as the new skyfather born.
+                </div>
+                <div class="p-footer">
+                    <div class="pf-evaluation">
+                        <i class="bi bi-hand-thumbs-up p-likebtn"></i>
+                        <span class="p-likes">5465</span>
+                        <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
+                        <span class="p-rate">7.4/10</span>
+                    </div>
+                    <div class="pf-user">
+                        <span class="p-username">MrBombastic</span>
+                        <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
+                    </div>
+                </div>
+            </div>
+            <div class="post-menu d-none">
+                <div class="pd-details">
+                    <span class="pd-heading">
+                        Tags
+                    </span>
+                    <div class="pd-tags">
+                        <span>Action</span>
+                        <span>Comedy</span>
+                        <span>Mystery</span>
+                        <span>Fantasy</span>
+                        <span>Romance</span>
+                        <span>Western</span>
+                    </div>
+                    <div class="pd-type">
+                        <span class="pd-heading">Type:</span>
+                        <span class="pd-value">Fanfiction</span>
+                    </div>
+                    <div class="pd-poststatus">
+                        <span class="pd-heading">Status:</span>
+                        <span class="pd-value">In-progress</span>
+                    </div>
+                    <div class="pd-language">
+                        <span class="pd-heading">Language:</span>
+                        <span class="pd-value">English</span>
+                    </div>
+                </div>
+                <div class="pd-right">
+                    <div class="pd-close">
+                        <i class="bi bi-caret-down pd-closebtn"></i>
+                    </div>
+                    <div class="pd-actions">
+                        <button type="button" class="pd-saved">Save</button>
+                        <button type="button">Share</button>
+                        <button type="button">Report</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="post">
+            <div class="post-detail d-flex">
+                <div class="p-header">
+                    <div class="p-title">
+                        <span>Odin the Omnipotent</span>
+                        <span class="p-date">27/07/022</span>
+                    </div>
+                    <div class="p-menu">
+                        <i class="bi bi-caret-left p-menubtn"></i>
+                    </div>
+                </div>
+                <div class="p-body">
+                    After his father’s death, Odin was not going to be so peaceful. Old ways died as the new skyfather born.
+                </div>
+                <div class="p-footer">
+                    <div class="pf-evaluation">
+                        <i class="bi bi-hand-thumbs-up p-likebtn"></i>
+                        <span class="p-likes">5465</span>
+                        <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
+                        <span class="p-rate">7.4/10</span>
+                    </div>
+                    <div class="pf-user">
+                        <span class="p-username">MrBombastic</span>
+                        <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
+                    </div>
+                </div>
+            </div>
+            <div class="post-menu d-none">
+                <div class="pd-details">
+                    <span class="pd-heading">
+                        Tags
+                    </span>
+                    <div class="pd-tags">
+                        <span>Action</span>
+                        <span>Comedy</span>
+                        <span>Mystery</span>
+                        <span>Fantasy</span>
+                        <span>Romance</span>
+                        <span>Western</span>
+                    </div>
+                    <div class="pd-type">
+                        <span class="pd-heading">Type:</span>
+                        <span class="pd-value">Fanfiction</span>
+                    </div>
+                    <div class="pd-poststatus">
+                        <span class="pd-heading">Status:</span>
+                        <span class="pd-value">In-progress</span>
+                    </div>
+                    <div class="pd-language">
+                        <span class="pd-heading">Language:</span>
+                        <span class="pd-value">English</span>
+                    </div>
+                </div>
+                <div class="pd-right">
+                    <div class="pd-close">
+                        <i class="bi bi-caret-down pd-closebtn"></i>
+                    </div>
+                    <div class="pd-actions">
+                        <button type="button" class="pd-saved">Save</button>
+                        <button type="button">Share</button>
+                        <button type="button">Report</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    
+    <div class="tpgroup tpgroup_2">
+        <div class="tpgroup_header">
+            <span>Month's Top Posts</span>
+        </div>
+        
+        <div class="post">
+            <div class="post-detail d-flex">
+                <div class="p-header">
+                    <div class="p-title">
+                        <span>Odin the Omnipotent</span>
+                        <span class="p-date">27/07/022</span>
+                    </div>
+                    <div class="p-menu">
+                        <i class="bi bi-caret-left p-menubtn"></i>
+                    </div>
+                </div>
+                <div class="p-body">
+                    After his father’s death, Odin was not going to be so peaceful. Old ways died as the new skyfather born.
+                </div>
+                <div class="p-footer">
+                    <div class="pf-evaluation">
+                        <i class="bi bi-hand-thumbs-up p-likebtn"></i>
+                        <span class="p-likes">5465</span>
+                        <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
+                        <span class="p-rate">7.4/10</span>
+                    </div>
+                    <div class="pf-user">
+                        <span class="p-username">MrBombastic</span>
+                        <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
+                    </div>
+                </div>
+            </div>
+            <div class="post-menu d-none">
+                <div class="pd-details">
+                    <span class="pd-heading">
+                        Tags
+                    </span>
+                    <div class="pd-tags">
+                        <span>Action</span>
+                        <span>Comedy</span>
+                        <span>Mystery</span>
+                        <span>Fantasy</span>
+                        <span>Romance</span>
+                        <span>Western</span>
+                    </div>
+                    <div class="pd-type">
+                        <span class="pd-heading">Type:</span>
+                        <span class="pd-value">Fanfiction</span>
+                    </div>
+                    <div class="pd-poststatus">
+                        <span class="pd-heading">Status:</span>
+                        <span class="pd-value">In-progress</span>
+                    </div>
+                    <div class="pd-language">
+                        <span class="pd-heading">Language:</span>
+                        <span class="pd-value">English</span>
+                    </div>
+                </div>
+                <div class="pd-right">
+                    <div class="pd-close">
+                        <i class="bi bi-caret-down pd-closebtn"></i>
+                    </div>
+                    <div class="pd-actions">
+                        <button type="button" class="pd-saved">Save</button>
+                        <button type="button">Share</button>
+                        <button type="button">Report</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="post">
+            <div class="post-detail d-flex">
+                <div class="p-header">
+                    <div class="p-title">
+                        <span>Odin the Omnipotent</span>
+                        <span class="p-date">27/07/022</span>
+                    </div>
+                    <div class="p-menu">
+                        <i class="bi bi-caret-left p-menubtn"></i>
+                    </div>
+                </div>
+                <div class="p-body">
+                    After his father’s death, Odin was not going to be so peaceful. Old ways died as the new skyfather born.
+                </div>
+                <div class="p-footer">
+                    <div class="pf-evaluation">
+                        <i class="bi bi-hand-thumbs-up p-likebtn"></i>
+                        <span class="p-likes">5465</span>
+                        <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
+                        <span class="p-rate">7.4/10</span>
+                    </div>
+                    <div class="pf-user">
+                        <span class="p-username">MrBombastic</span>
+                        <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
+                    </div>
+                </div>
+            </div>
+            <div class="post-menu d-none">
+                <div class="pd-details">
+                    <span class="pd-heading">
+                        Tags
+                    </span>
+                    <div class="pd-tags">
+                        <span>Action</span>
+                        <span>Comedy</span>
+                        <span>Mystery</span>
+                        <span>Fantasy</span>
+                        <span>Romance</span>
+                        <span>Western</span>
+                    </div>
+                    <div class="pd-type">
+                        <span class="pd-heading">Type:</span>
+                        <span class="pd-value">Fanfiction</span>
+                    </div>
+                    <div class="pd-poststatus">
+                        <span class="pd-heading">Status:</span>
+                        <span class="pd-value">In-progress</span>
+                    </div>
+                    <div class="pd-language">
+                        <span class="pd-heading">Language:</span>
+                        <span class="pd-value">English</span>
+                    </div>
+                </div>
+                <div class="pd-right">
+                    <div class="pd-close">
+                        <i class="bi bi-caret-down pd-closebtn"></i>
+                    </div>
+                    <div class="pd-actions">
+                        <button type="button" class="pd-saved">Save</button>
+                        <button type="button">Share</button>
+                        <button type="button">Report</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
