--- a/OmneFictio.Web/wwwroot/css/index.css
+++ b/OmneFictio.Web/wwwroot/css/index.css
@@ -11,8 +11,7 @@ main {
   display: flex;
   flex-direction: column;
 }
-
-.linkgroup_cont {
+.linkgroups .linkgroup_cont {
   width: 100%;
   background-color: #313131;
   margin-bottom: 10px;
@@ -20,36 +19,235 @@ main {
   display: flex;
   flex-direction: column;
 }
-.linkgroup_cont > span {
+.linkgroups .linkgroup_cont:last-child {
+  margin-bottom: unset;
+}
+.linkgroups .linkgroup_cont > span {
   padding-top: 6px;
   font-size: 2rem;
   text-align: center;
 }
-.linkgroup_cont .linkgroup {
+.linkgroups .linkgroup_cont .linkgroup {
   width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
 }
-.linkgroup_cont .linkgroup .link_cont {
+.linkgroups .linkgroup_cont .linkgroup .link_cont {
   width: 33%;
   padding: 7px 10px;
   display: flex;
   flex-direction: column;
   cursor: pointer;
 }
-.linkgroup_cont .linkgroup .link_cont i {
+.linkgroups .linkgroup_cont .linkgroup .link_cont i {
   font-size: 3rem;
   text-align: center;
 }
-.linkgroup_cont .linkgroup .link_cont span {
+.linkgroups .linkgroup_cont .linkgroup .link_cont span {
   text-align: center;
   transition: 0.1s;
+  height: 32px;
 }
 
 .misclinks > .linkgroup {
   padding: unset;
+}
+
+.toppost_groups {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.toppost_groups .tpgroup {
+  width: 100%;
+}
+.toppost_groups .tpgroup .tpgroup_header {
+  display: flex;
+  justify-content: center;
+  padding: 14px;
+}
+.toppost_groups .tpgroup .tpgroup_header > span {
+  font-size: 1.6rem;
+  font-family: "Doppio One";
+}
+.toppost_groups .tpgroup .post {
+  margin-bottom: 12px;
+  background-color: #313131;
+  overflow: hidden;
+  max-height: 260px;
+}
+.toppost_groups .tpgroup .post:last-child {
+  margin-bottom: unset;
+}
+.toppost_groups .tpgroup .post .post-detail {
+  display: flex;
+  flex-direction: column;
+}
+.toppost_groups .tpgroup .post .post-detail .p-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.toppost_groups .tpgroup .post .post-detail .p-header .p-title {
+  padding: 10px;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 600;
+}
+.toppost_groups .tpgroup .post .post-detail .p-header .p-title span {
+  vertical-align: middle;
+}
+.toppost_groups .tpgroup .post .post-detail .p-header .p-title span:hover {
+  text-decoration: underline;
+}
+.toppost_groups .tpgroup .post .post-detail .p-header .p-title .p-date {
+  margin-left: 6px;
+  color: #bababa;
+  font-size: 0.7rem;
+  font-family: "Gudea";
+}
+.toppost_groups .tpgroup .post .post-detail .p-header .p-menu {
+  display: flex;
+  height: 100%;
+  padding: 0 10px;
+  font-size: 2rem;
+}
+.toppost_groups .tpgroup .post .post-detail .p-header .p-menu i {
+  cursor: pointer;
+}
+.toppost_groups .tpgroup .post .post-detail .p-body {
+  padding: 0 14px;
+  font-size: 0.9rem;
+  font-family: "Gudea", sans-serif;
+  margin-bottom: 10px;
+  /*text-overflow: ellipsis;
+  overflow: hidden;*/
+}
+.toppost_groups .tpgroup .post .post-detail .p-footer {
+  font-family: "Itim", cursive;
+  display: flex;
+  flex-direction: row;
+  padding: 0 10px 10px;
+}
+.toppost_groups .tpgroup .post .post-detail .p-footer .pf-evaluation {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  flex-grow: 1;
+}
+.toppost_groups .tpgroup .post .post-detail .p-footer .pf-evaluation i {
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: color 0.2s ease;
+}
+.toppost_groups .tpgroup .post .post-detail .p-footer .pf-evaluation i:hover {
+  color: #cccccc;
+}
+.toppost_groups .tpgroup .post .post-detail .p-footer .pf-evaluation .p-likes {
+  padding: 0 8px;
+}
+.toppost_groups .tpgroup .post .post-detail .p-footer .pf-evaluation .p-rate {
+  margin-left: 20px;
+}
+.toppost_groups .tpgroup .post .post-detail .p-footer .pf-user {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  flex-shrink: 0;
+}
+.toppost_groups .tpgroup .post .post-detail .p-footer .pf-user .p-username {
+  font-size: 0.8rem;
+  cursor: pointer;
+  margin-left: 8px;
+  padding-right: 8px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 180px;
+}
+.toppost_groups .tpgroup .post .post-detail .p-footer .pf-user .p-username:hover {
+  text-decoration: underline;
+}
+.toppost_groups .tpgroup .post .post-detail .p-footer .pf-user img {
+  height: 1.7rem;
+  width: 1.7rem;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.toppost_groups .tpgroup .post .post-menu {
+  display: none;
+  flex-direction: row;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-details {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-details .pd-heading {
+  font-size: 1.1rem;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 600;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-details .pd-value {
+  font-size: 0.9rem;
+  font-family: "Gudea", sans-serif;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-details .pd-tags {
+  font-size: 0.7rem;
+  font-family: "Gudea", sans-serif;
+  margin-bottom: 8px;
+  padding: 0 4px;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-details .pd-tags span {
+  margin-right: 6px;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-details .pd-type {
+  margin-bottom: 8px;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-details .pd-poststatus {
+  margin-bottom: 8px;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-right {
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-right .pd-close {
+  display: flex;
+  justify-content: end;
+  padding: 4px 10px;
+  font-size: 2rem;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-right .pd-close i {
+  cursor: pointer;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-right .pd-actions {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 4px 10px;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-right .pd-actions .pd-saved {
+  background-color: #4A8D5D !important;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-right .pd-actions button {
+  color: #ffffff;
+  border-radius: 20px;
+  background-color: #4E4E4E;
+  outline: none;
+  border: none;
+  margin-bottom: 8px;
+  padding: 2px 10px;
+  transition: 0.2s ease;
+}
+.toppost_groups .tpgroup .post .post-menu .pd-right .pd-actions button:hover {
+  background-color: #5e5e5e;
 }
 
 @media (min-width: 768px) {
@@ -57,33 +255,40 @@ main {
     padding-top: 20px;
   }
 
-  .linkgroup_cont {
+  .linkgroups .linkgroup_cont {
     background-color: #1D1D1D;
     border-radius: 14px;
     margin-bottom: 16px;
   }
-  .linkgroup_cont > span {
+  .linkgroups .linkgroup_cont > span {
     padding-top: unset;
     padding-bottom: 10px;
   }
-  .linkgroup_cont .linkgroup {
+  .linkgroups .linkgroup_cont .linkgroup {
     flex-wrap: nowrap;
     overflow-y: auto;
   }
-  .linkgroup_cont .linkgroup .link_cont {
+  .linkgroups .linkgroup_cont .linkgroup .link_cont {
     padding: 10px;
   }
-  .linkgroup_cont .linkgroup .link_cont:hover > span {
+  .linkgroups .linkgroup_cont .linkgroup .link_cont:hover > span {
     font-size: 1.5rem;
     text-decoration: underline;
   }
-  .linkgroup_cont .linkgroup span {
+  .linkgroups .linkgroup_cont .linkgroup span {
     font-size: 1.3rem;
   }
-
-  .misclinks > .linkgroup > .link_cont {
+  .linkgroups .misclinks > .linkgroup > .link_cont {
     width: unset;
-    padding: 10px 20px;
+    margin: 10px 20px;
+  }
+
+  .toppost_groups > .tpgroup {
+    width: 47%;
+  }
+  .toppost_groups > .tpgroup .post {
+    background-color: #1D1D1D !important;
+    border-radius: 10px;
   }
 }
 @media (min-width: 992px) {
@@ -92,18 +297,15 @@ main {
     justify-content: space-between;
     flex-direction: row;
   }
-
-  .readingtime {
+  .linkgroups .readingtime {
     width: 47%;
     padding: 20px 0;
   }
-
-  .aboutyou {
+  .linkgroups .aboutyou {
     width: 47%;
     padding: 20px 0;
   }
-
-  .misclinks {
+  .linkgroups .misclinks {
     padding: 20px 0;
   }
 }/*# sourceMappingURL=index.css.map */
