--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -10,40 +10,43 @@ main{
 .linkgroups{
     display: flex;
     flex-direction: column;
-}
-
-.linkgroup_cont{
-    width: 100%;
-    background-color: $frontbgcolor;
-    margin-bottom: 10px;
-    font-family: 'Itim', cursive;
-    display: flex;
-    flex-direction: column;
-    > span{
-        padding-top: 6px;
-        font-size: 2rem;
-        text-align: center;
-    }
-    .linkgroup{
+    .linkgroup_cont{
         width: 100%;
+        background-color: $frontbgcolor;
+        margin-bottom: 10px;
+        font-family: 'Itim', cursive;
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        .link_cont{
-            width: 33%;
-            padding: 7px 10px;
+        flex-direction: column;
+        &:last-child{
+            margin-bottom: unset;
+        }
+        > span{
+            padding-top: 6px;
+            font-size: 2rem;
+            text-align: center;
+        }
+        .linkgroup{
+            width: 100%;
             display: flex;
-            flex-direction: column;
-            cursor: pointer;
-            //justify-content: space-between;
-            i{
-                font-size: 3rem;
-                text-align: center;
-            }
-            span{
-                text-align: center;
-                transition: 0.1s;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            .link_cont{
+                width: 33%;
+                padding: 7px 10px;
+                display: flex;
+                flex-direction: column;
+                cursor: pointer;
+                //justify-content: space-between;
+                i{
+                    font-size: 3rem;
+                    text-align: center;
+                }
+                span{
+                    text-align: center;
+                    transition: 0.1s;
+                    height: 32px;
+                }
             }
         }
     }
@@ -52,6 +55,205 @@ main{
 .misclinks > .linkgroup{
     padding: unset;
 }
+
+.toppost_groups{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    .tpgroup{
+        width: 100%;
+        .tpgroup_header{
+            display: flex;
+            justify-content: center;
+            padding: 14px;
+            > span{
+                font-size: 1.6rem;
+                font-family: 'Doppio One';
+            }
+        }
+        .post{
+            margin-bottom: 12px;
+            background-color: $frontbgcolor;
+            overflow: hidden;
+            max-height: 260px;
+            &:last-child{
+                margin-bottom: unset;
+            }
+            .post-detail{
+                display: flex;
+                flex-direction: column;
+                .p-header{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: flex-start;
+                    .p-title{
+                        padding: 10px;
+                        font-family: 'Josefin Sans', sans-serif;
+                        font-weight: 600;
+                        span{
+                            vertical-align:middle;
+                        }
+                        span:hover{
+                            text-decoration: underline;
+                        }
+                        .p-date{
+                            margin-left: 6px;
+                            color: $textcolor2;
+                            font-size: 0.7rem;
+                            font-family: 'Gudea';
+                        }
+                    }
+                    .p-menu{
+                        display: flex;
+                        height: 100%;
+                        padding: 0 10px;
+                        font-size: 2rem;
+                        i{
+                            cursor: pointer;
+                        }
+                    }
+                }
+                .p-body{
+                    padding: 0 14px;
+                    font-size: 0.9rem;
+                    font-family: 'Gudea', sans-serif;
+                    margin-bottom: 10px;
+                    /*text-overflow: ellipsis;
+                    overflow: hidden;*/
+                }
+                .p-footer{
+                    //color: $textcolor;
+                    font-family: 'Itim', cursive;
+                    display: flex;
+                    flex-direction: row;
+                    padding: 0 10px 10px;
+                    .pf-evaluation{
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: flex-start;
+                        align-items: center;
+                        flex-grow: 1;
+                        i{
+                            font-size: 1.2rem;
+                            cursor: pointer;
+                            transition: color 0.2s ease;
+                            &:hover{
+                                color: $textcolor_hover1;
+                            }
+                        }
+                        .p-likes{
+                            padding: 0 8px;
+                        }
+                        .p-rate{
+                            margin-left: 20px;
+                        }
+                    }
+                    .pf-user{
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: flex-start;
+                        align-items: center;
+                        flex-shrink: 0;
+                        .p-username{
+                            font-size: 0.8rem;
+                            cursor: pointer;
+                            margin-left: 8px;
+                            padding-right: 8px;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            overflow: hidden;
+                            max-width: 180px;
+                            &:hover{
+                                text-decoration: underline;
+                            }
+                        }
+                        img{
+                            height: 1.7rem;
+                            width: 1.7rem;
+                            border-radius: 50%;
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+
+            .post-menu{
+                display: none; //flex
+                flex-direction: row;
+                .pd-details{
+                    flex-grow: 1;
+                    display: flex;
+                    flex-direction: column;
+                    padding: 10px;
+                    .pd-heading{
+                        font-size: 1.1rem;
+                        font-family: 'Josefin Sans', sans-serif;
+                        font-weight: 600;
+                    }
+                    .pd-value{
+                        font-size: 0.9rem;
+                        font-family: 'Gudea', sans-serif;
+                    }
+                    .pd-tags{
+                        font-size: 0.7rem;
+                        font-family: 'Gudea', sans-serif;
+                        margin-bottom: 8px;
+                        padding: 0 4px;
+                        span{
+                            margin-right: 6px;
+                        }
+                    }
+                    .pd-type{
+                        margin-bottom: 8px;
+                    }
+                    .pd-poststatus{
+                        margin-bottom: 8px;
+                    }
+                }
+                .pd-right{
+                    display: flex;
+                    flex-direction: column;
+                    flex-shrink: 0;
+                    .pd-close{
+                        display: flex;
+                        justify-content: end;
+                        padding: 4px 10px;
+                        font-size: 2rem;
+                        i{
+                            cursor: pointer;
+                        }
+                    }
+                    .pd-actions{
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        padding: 4px 10px;
+                        .pd-saved{
+                            background-color: #4A8D5D !important;
+                        }
+                        button{
+                            color: $textcolor;
+                            border-radius: 20px;
+                            background-color: $frontbgcolor_hover2;
+                            outline: none;
+                            border: none;
+                            margin-bottom: 8px;
+                            padding: 2px 10px;
+                            transition: 0.2s ease;
+                            &:hover{
+                                background-color: $frontbgcolor_hover3;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
@@ -62,32 +264,44 @@ main{
     main{
         padding-top: 20px;
     }
-    .linkgroup_cont{
-        background-color: $sitebgcolor;
-        border-radius: 14px;
-        margin-bottom: 16px;
-        > span{
-            padding-top: unset;
-            padding-bottom: 10px;
-        }
-        .linkgroup{
-            flex-wrap: nowrap;
-            overflow-y: auto;
-            .link_cont{
-                padding: 10px;
-                &:hover > span{
-                    font-size: 1.5rem;
-                    text-decoration: underline;
+    .linkgroups{
+        .linkgroup_cont{
+            background-color: $sitebgcolor;
+            border-radius: 14px;
+            margin-bottom: 16px;
+            > span{
+                padding-top: unset;
+                padding-bottom: 10px;
+            }
+            .linkgroup{
+                flex-wrap: nowrap;
+                overflow-y: auto;
+                .link_cont{
+                    padding: 10px;
+                    &:hover > span{
+                        font-size: 1.5rem;
+                        text-decoration: underline;
+                    }
+                }
+                span{
+                    font-size: 1.3rem;
                 }
             }
-            span{
-                font-size: 1.3rem;
-            }
+        }
+        //Misc links will lose 33% and become a line
+        .misclinks > .linkgroup > .link_cont{
+            width: unset;
+            margin: 10px 20px;
         }
     }
-    .misclinks > .linkgroup > .link_cont{
-        width: unset;
-        padding: 10px 20px;
+
+    //top posts
+    .toppost_groups > .tpgroup{
+        width: 47%;
+        .post{
+            background-color: $sitebgcolor !important;
+            border-radius: 10px;
+        }
     }
 }
 
@@ -97,17 +311,17 @@ main{
         flex-wrap: wrap;
         justify-content: space-between;
         flex-direction: row;
-    }
-    .readingtime{
-        width: 47%;
-        padding: 20px 0;
-    }
-    .aboutyou{
-        width: 47%;
-        padding: 20px 0;
-    }
-    .misclinks{
-        padding: 20px 0;
+        .readingtime{
+            width: 47%;
+            padding: 20px 0;
+        }
+        .aboutyou{
+            width: 47%;
+            padding: 20px 0;
+        }
+        .misclinks{
+            padding: 20px 0;
+        }
     }
 }
 
