--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -47,19 +47,20 @@ main{
             margin-right: 36px;
         }
     }
-}
-.post{
-    margin-bottom: 12px;
-    background-color: $frontbgcolor;
-    overflow: hidden;
-    max-height: 260px;
+    
+    .post{
+        margin-bottom: 12px;
+        background-color: $frontbgcolor;
+        overflow: hidden;
+        max-height: 260px;
+        &:last-child{
+            margin-bottom: unset;
+        }
+    }
 }
 .post-detail{
     display: flex;
     flex-direction: column;
-    &:last-child{
-        margin-bottom: unset;
-    }
     .p-header{
         display: flex;
         flex-direction: row;
@@ -97,6 +98,9 @@ main{
         font-size: 0.9rem;
         font-family: 'Gudea', sans-serif;
         margin-bottom: 10px;
+        /*
+        text-overflow: ellipsis;
+        overflow: hidden;*/
     }
     .p-footer{
         //color: $textcolor;
@@ -119,7 +123,7 @@ main{
             padding: 0 8px;
         }
         .p-rate{
-            padding: 0 20px;
+            margin: 0 20px;
             flex-grow: 1;
         }
         .p-username{
@@ -160,7 +164,7 @@ main{
             font-family: 'Gudea', sans-serif;
         }
         .pd-tags{
-            font-size: 0.9rem;
+            font-size: 0.7rem;
             font-family: 'Gudea', sans-serif;
             margin-bottom: 8px;
             padding: 0 4px;
